<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@color/white"
    android:orientation="horizontal"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/home_tab"
        style="@style/main_tab_style"
        android:drawableTop="@drawable/home_tab_selector"
        android:text="@string/home_title" />

    <TextView
        android:id="@+id/box_tab"
        style="@style/main_tab_style"
        android:drawableTop="@drawable/box_tab_selector"
        android:text="@string/box_title" />

    <TextView
        android:id="@+id/mine_tab"
        style="@style/main_tab_style"
        android:drawableTop="@drawable/mine_tab_selector"
        android:text="@string/mine_title" />

</LinearLayout>