<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/gray1"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorPrimary"
        >

        <ImageView
            android:id="@+id/mine_logo_iv"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/ic_launcher"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            />
        <TextView
            android:id="@+id/mine_rigst_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_below="@+id/mine_logo_iv"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <ImageView
            android:id="@+id/mine_update_iv"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/ic_update"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            />
        <TextView
            android:id="@+id/mine_update_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:textColor="@color/description_text"
            android:layout_toRightOf="@+id/mine_update_iv"
            android:text="@string/mine_update"
            android:inputType="text"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/next"
            android:layout_marginRight="15dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:background="@color/gray1"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <ImageView
            android:id="@+id/mine_about_iv"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/ic_aboutus"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            />
        <TextView
            android:id="@+id/mine_about_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:textColor="@color/description_text"
            android:layout_toRightOf="@+id/mine_about_iv"
            android:text="@string/mine_about"
            android:inputType="text"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/next"
            android:layout_marginRight="15dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:background="@color/gray1"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <ImageView
            android:id="@+id/mine_feedback_iv"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_feedback"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            />
        <TextView
            android:id="@+id/mine_feedback_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:textColor="@color/description_text"
            android:layout_toRightOf="@+id/mine_feedback_iv"
            android:text="@string/mine_feedback"
            android:inputType="text"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/next"
            android:layout_marginRight="15dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:background="@color/gray1"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            />
    </RelativeLayout>


    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="60dp">
        <ImageView
            android:id="@+id/mine_setting_iv"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_setting"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            />
        <TextView
            android:id="@+id/mine_setting_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:textColor="@color/description_text"
            android:layout_toRightOf="@+id/mine_setting_iv"
            android:text="@string/mine_setting"
            android:inputType="text"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/next"
            android:layout_marginRight="15dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:background="@color/gray1"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            />
    </RelativeLayout>

</LinearLayout>

